# SLAE

./: CMakeLists.txt  README.md  main.cpp
kr2/: main.cpp  r11.txt  r12.txt  task2.txt
src/: CMakeLists.txt
src/slae_methods/: BiCG.cpp  BiCG.h  CSR_matrix.cpp  CSR_matrix.h  ConjugateGradient.cpp  ConjugateGradient.h  FixedPointIteration.cpp  FixedPointIteration.h  GaussSeidelMethod.cpp  GaussSeidelMethod.h  GradientDescent.cpp  GradientDescent.h  JacobiMethod.cpp  JacobiMethod.h  SOR.cpp  SOR.h  TridiagonalMatrix.cpp  TridiagonalMatrix.h  TridiagonalMatrixAlgorithm.cpp  TridiagonalMatrixAlgorithm.h  tools.cpp  tools.h
src/slae_methods/ConjugateGradient/: ConjugateGradient.cpp  ConjugateGradient.h
src/slae_methods/FPI/: FixedPointIteration.cpp  FixedPointIteration.h
src/slae_methods/GS/: GaussSeidelMethod.cpp  GaussSeidelMethod.h
src/slae_methods/GradientDescent/: GradientDescent.cpp  GradientDescent.h
src/slae_methods/Jacobi/: JacobiMethod.h
src/slae_methods/SOR/: SOR.cpp  SOR.h
src/slae_methods/Tridiagonal/: TridiagonalMatrix.cpp  TridiagonalMatrixAlgorithm.h
tests/: CMakeLists.txt  CSR_matrixTest.cc  FixedPointIterationTest.cc  GaussSeidelTest.cc  TridiagonalMatrixAlgorithmTest.cc
